fix-text-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ nav a:hover{
 ul.flex {
     justify-content: center;
     flex-wrap: wrap;
+    text-wrap: nowrap;
 }
 
 
